# rollbar-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: client.rs  configuration.rs  errors.rs  helpers.rs  lib.rs  macros.rs  models.rs  transport.rs
