[package]
name = "rollbar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
human-errors = "0.1"
log = "0.4"
reqwest = { version = "0.12", features = ["gzip", "json", "rustls-tls"] }
rollbar-rust = { git = "https://github.com/rollbar/rollbar-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["rt"], optional = true }

[dev-dependencies]
env_logger = "0.11"
httptest = "0.15"
test-log = "0.2.8"

[features]
default = ["threaded"]
threaded = ["reqwest/blocking"]
async = ["tokio"]